# Electoral-Evidence-Agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: dossier_generator.py
app/analytics/: digit_tests.py  robust_stats.py
app/api/: demo.py  dossiers.py  health.py  ingestions.py  llm.py  reports.py  review_cases.py  routes.py
app/core/: errors.py  settings.py
app/dashboard/: streamlit_app.py
app/db/: session.py
app/ingestion/: file_reader.py  hashing.py  profiler.py
app/reports/: exporters.py
app/schemas/: common.py  ingestions.py  review_cases.py
config/: agent_policy.yaml  column_aliases.yaml  elections.yaml  rules.yaml  scoring.yaml
db/migrations/: env.py
docs/: api.md  architecture.md  configuration.md  data_model.md  demo.md  development.md  methodology.md  project_report.md  reports.md  setup.md  ui.md  video_script.md
docs-video/: index.html
scripts/: demo.ps1  init.ps1  init_db.sh  reset.ps1  run_dashboard.sh  seed_db.sh  setup.ps1  test.ps1
tests/: test_agent_dossier_api.py  test_basic_metrics_api.py  test_catalog_seeds.py  test_config_loading.py  test_core_load_api.py  test_db_connection.py  test_eda_alerts_api.py  test_evidence_agent_context_api.py  test_health_api.py  test_human_readable_reports_api.py  test_ingestion_api.py  test_ingestion_components.py  test_llm_optional_api.py  test_quality_and_totals_api.py  test_reports_demo_api.py  test_scoring_review_cases_api.py  test_territorial_metrics_api.py
(+35 files in other folders)
