[project]
name = "electoral-evidence-agent"
version = "0.1.0"
description = "MVP Agente de Evidencia Electoral"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "polars",
    "streamlit",
    "plotly",
    "jinja2",
    "python-multipart",
    "pytest",
    "httpx",
    "requests",
    "anthropic"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests that require external services such as PostgreSQL"
]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.testclient.StarletteDeprecationWarning"
]

[tool.ruff]
line-length = 100
